[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Common/Menus/PauseMenu/pause_menu.gd" type="Script" id=1]
[ext_resource path="res://Game/Common/Themes/Menus/PauseMenu/pause_menu.tres" type="Theme" id=2]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
layer = 4
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="Panel" type="Panel" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="CenterContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Menu"]
margin_left = 412.0
margin_top = 140.0
margin_right = 612.0
margin_bottom = 459.0
rect_min_size = Vector2( 200, 0 )

[node name="ResumeButton" type="Button" parent="UI/Menu/VBoxContainer"]
margin_right = 200.0
margin_bottom = 46.0
text = "Resume"

[node name="RestartButton" type="Button" parent="UI/Menu/VBoxContainer"]
margin_top = 91.0
margin_right = 200.0
margin_bottom = 137.0
text = "Restart"

[node name="OptionButton" type="Button" parent="UI/Menu/VBoxContainer"]
margin_top = 182.0
margin_right = 200.0
margin_bottom = 228.0
text = "Options"

[node name="MainMenuButton" type="Button" parent="UI/Menu/VBoxContainer"]
margin_top = 273.0
margin_right = 200.0
margin_bottom = 319.0
text = "Main menu"

[connection signal="pressed" from="UI/Menu/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="UI/Menu/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
